--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,14 @@ DECLARE @FiscalQuarter INT = CEILING(@FiscalMonth / 3.0);
 
 -- Resulting ReportQuarter (e.g., "2025 Q1")
 DECLARE @ReportQuarter NVARCHAR(20) = CONCAT(@FiscalYear, ' Q', @FiscalQuarter);
+
+
+INSERT INTO [your_table] (Vendor, PCMID, RiskArea, ReportQuarter)
+VALUES (
+    @Vendor, @PCMID, @RiskArea,
+    CONCAT(
+        YEAR(GETDATE()) + CASE WHEN MONTH(GETDATE()) < 4 THEN 0 ELSE 1 END,
+        ' Q',
+        CEILING(((MONTH(GETDATE()) + 12 - 4) % 12 + 1) / 3.0)
+    )
+);
